fix: Missed specification of EnvironmentController#getSystemsYamlZipArchive method is added to openapi-environments-v1.yaml.